recursion.cons.lessons.recursion.cons.PlusOne.scala.error
plusOne:3: error: type mismatch;
 found   : List[Int]
 required: Int
	return List(1+ l.head,l.tail)
                                ^