recursion.cons.lessons.recursion.cons.PlusOne.scala.code
def plusOne(l:List[Int]): List[Int] = {
	if( l.tail==Nil)
	return List(1+ l.head,l.tail)
	return plusOne(l.tail)
}
